--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+html, body, #root {
+    height: 100%;
+    margin: 0;
+    padding:0;
+    box-sizing: border-box;
+    font-family:'Nunito Sans';
   }
+  
+.app{
+    margin: 0;
+    padding: 0;
+    height:100%;
+    width: 100%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.car-container{
+    height:20%;
+    width:500%;
+    position:relative;
+    background-repeat: repeat-x;
 }
 
-.App-link {
-  color: #61dafb;
+.car-ctr{
+    position: absolute;
+    bottom:100px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.hover-active:hover,
+.hover-active:active {
+  transform: scale(1.2);
 }
